# node-gir

./: .clang-format  .clang-tidy  .editorconfig  .eslintrc  .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  gir.js  package-lock.json  package.json
.circleci/: config.yml
__tests__/: arguments_directions.test.js  callbacks.test.js  enums.test.js  flags.test.js  functions.test.js  gir.test.js  gtk_main_loop.test.js  object_constructor.test.js  object_property.test.js  returned_value.test.js  signals.test.js  struct.test.js  structure_constructor.test.js  tmp.test.js
examples/: browser.js  gtk-builder.js  gtk.js  gtk_builder.js  gtk_test.js  guitartuner.js  keybinder.js  notify.js
scripts/: lint.sh  run-clang-tidy.py
src/: GLib.js  Gtk.js  addon.js  arguments.cc  arguments.cpp  arguments.h  closure.cpp  closure.h  exceptions.h  function.cc  function.h  index.js  init.cc  loop.cc  loop.cpp  loop.h  main.cpp  namespace_loader.cc  namespace_loader.cpp  namespace_loader.h  signal_closure.cc  signal_closure.cpp  signal_closure.h  util.cc  util.cpp  util.h  values.cc  values.cpp  values.h
src/internal/: PersistentObjectStore.h
src/types/: enum.cc  enum.cpp  enum.h  function.cc  function.cpp  function.h  function_type.cc  function_type.h  object.cc  object.cpp  object.h  param_spec.cpp  param_spec.h  struct.cc  struct.cpp  struct.h
